@startuml
'https://plantuml.com/sequence-diagram

abstract class AbstractEnemyAircraft {
    + AbstractEnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
}


class MobEnemy {
'普通敌机类
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class SuperEnemy {
'精英敌机类
    + SuperEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class BossEnemy {
'boss敌机类
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}



interface EnemyFactory{
    + {abstract} createEnemy(int speed,int hp):AbstractEnemyAircraft
}
class MobEnemyFactory {
    + createEnemy(int speed,int hp):AbstractEnemyAircraft
}
class SuperEnemyFactory {
    + createEnemy(int speed,int hp):AbstractEnemyAircraft
}
class BossEnemyFactory {
    + createEnemy(int speed,int hp):AbstractEnemyAircraft
}

EnemyFactory<|.. MobEnemyFactory
EnemyFactory<|.. SuperEnemyFactory
EnemyFactory<|.. BossEnemyFactory
AbstractEnemyAircraft <|-- MobEnemy
AbstractEnemyAircraft <|-- SuperEnemy
AbstractEnemyAircraft <|-- BossEnemy


MobEnemyFactory ..> MobEnemy:"«create»"
SuperEnemyFactory ..> SuperEnemy:"«create»"
BossEnemyFactory ..> BossEnemy:"«create»"
BaseGame ..> EnemyFactory
BaseGame ..> AbstractEnemyAircraft

@enduml
